# mqtt-challenge

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: main.rs
esp32/: README.md
esp32/src/: adc_reader.rs  main.rs  writers.rs
esp32/src/writers/: MqttWriter.rs
mqtt-container/: start_listener.sh  start_mqtt.sh
mqtt-core/: Cargo.toml
mqtt-core/src/writers/: MqttWriter.rs
src/: main.rs
