[package]
name = "mqtt-challenge"
version = "0.1.0"
authors = ["Koen Braham <koen@braham.eu>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-svc = { version = "0.48", default-features = false }
async-io = "2"
async-executor = "1"
futures-lite = "1"

[build-dependencies]
embuild = "0.31.3"
