[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-core = {path = "../mqtt-core" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
embedded-svc = { version = "0.25.0", default-features = false}