[package]
name = "mqtt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7" }
embedded-svc = { version = "0.25.0", default-features = false}
rust-mqtt = { version = "0.1", default-features = false }